--- a/CommunityKitchen/Views/Event/DeleteEvent.cshtml
+++ b/CommunityKitchen/Views/Event/DeleteEvent.cshtml
@@ -14,72 +14,47 @@
         margin-left: 151px;
     }
 </style>
-<div class="default-form-area" style="display: flex; justify-content: center">
-    <div id="contact-form" class="default-form">
-        <div class="section-title">
-            <h1 style="margin-left:45px">Are you sure you want to <span>delete</span> this Event?</h1>
-        </div>
-        <div class="row clearfix" style="justify-content: center">
-            <div class="col-md-12 col-sm-12 col-xs-6">
-                <hr />
-
-                <div class="form-group">
-                    <div class="section-title">
-                        <h2>Title</h2>
-                    </div>
-                    @Html.DisplayFor(model => model.Title)
-
+<section>
+    <div class="container">
+        <div class="default-form-area" style="display: flex; justify-content: center; padding-top:100px">
+            <div id="contact-form" class="default-form">
+                <div class="section-title" style="padding-bottom:10px;">
+                    <h3 style=" text-align:center;">Are you sure you want to <span>delete</span> this Event?</h3>
                 </div>
+                <div class="row clearfix">
 
-
-
-                <div class="form-group">
-                    <div class="section-title">
-                        <h2>Description</h2>
-                    </div>
-                    <div class="form-group">
-                        <p class="description">@Html.DisplayFor(model => model.Description)</p>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="section-title">
-                        <h2>Photo</h2>
-                    </div>
-                    @Html.DisplayFor(model => model.Photo)
-                </div>
-
-                <div class="form-group">
-                    <div class="section-title">
-                        <h2>Address</h2>
-                    </div>
-                    @Html.DisplayFor(model => model.Address)
-                </div>
-
-                <div class="form-group">
-                    <div class="section-title">
-                        <h2>EventDate</h2>
-                    </div>
-                    @Html.DisplayFor(model => model.EventDate)
-                </div>
-                <div class="form-group">
-                    @using (Html.BeginForm())
-                    {
-                        @Html.AntiForgeryToken()
-                        <div class="form-group">
-                            <div>
-                                <input type="submit" value="Delete" class="thm-btn style-1" />
-                            </div>
+                    <hr />
+                    <div class="form-group" style="text-align:left;">
+                        <h3><em>@Html.DisplayFor(model => model.Title)</em></h3>
+                        @*<div>
+                            <p>@Html.DisplayFor(model => model.Photo)</p>
+                        </div>*@
+                        <div style="padding-bottom: 30px;">
+                            <h3>@Html.DisplayFor(model => model.Description)</h3>
                         </div>
-
-
                         <div>
-
-                            @Html.ActionLink("Back to List", "OrganizeEvents")
+                            <p style="color:black;">DESCRIPTION: @Html.DisplayFor(model => model.FullDescription)</p>
                         </div>
-                    }
+                        <div>
+                            <p style="color:black;">Address: @Html.DisplayFor(model => model.Address)</p>
+                            <p style="color:black;">Date: @Html.DisplayFor(model => model.EventDate)</p>
+                        </div>
+                        <div> </div>
+                        @using (Html.BeginForm())
+                        {
+                            @Html.AntiForgeryToken()
+                            <div class="form-group">
+                                <div>
+                                    <input type="submit" value="Delete" class="thm-btn style-1" />
+                                </div>
+                            </div>
+                            <div style="text-align:center;">
+                                @Html.ActionLink("Back to List", "OrganizeEvents")
+                            </div>
+                        }
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</section>
