--- a/CommunityKitchen/Views/Cause/EditCause.cshtml
+++ b/CommunityKitchen/Views/Cause/EditCause.cshtml
@@ -16,6 +16,7 @@
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.Id)
+                    @Html.HiddenFor(model => model.ModeratorId)
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.Title)
@@ -47,12 +48,6 @@
                         @Html.LabelFor(model => model.CurrentAmmount)
                         @Html.EditorFor(model => model.CurrentAmmount, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.CurrentAmmount, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.ModeratorId)
-                        @Html.EditorFor(model => model.ModeratorId, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.ModeratorId, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
