--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -7374,4 +7374,13 @@ default-form style-three
 .google-email-form{
     padding:10px 0px 30px;
 }
-
+/*
+.description {
+    color: black !important;
+    background-color: #fff;
+    width: 785px;
+    height: 226px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    margin-left: 151px;
+}*/
