--- a/CommunityKitchen/Views/Cause/DeleteCause.cshtml
+++ b/CommunityKitchen/Views/Cause/DeleteCause.cshtml
@@ -5,78 +5,61 @@
 }
 
 <section>
-    <div class="container-fluid">
-        <div class="default-form-area" style="margin-top: 34px !important; display: flex; justify-content: center">
+    <div class="container">
+        <div class="default-form-area" style="display: flex; justify-content: center; padding-top:100px">
             <div id="contact-form" class="default-form">
-                <div class="section-title">
-                    <h1 style="margin-left:45px">Are you sure you want to <span>delete</span> this Cause?</h1>
+                <div class="section-title" style="padding-bottom:40px;">
+                    <h3 style=" text-align:center;"><strong>ARE YOU <em>SURE</em> YOU WANT TO <span>DELETE</span> THIS CAUSE?</strong></h3>
                 </div>
-                <div class="row clearfix" style="justify-content: center">
-                    <div class="col-md-12 col-sm-12 col-xs-6">
-                        <hr />
-                        <div class="form-group">
-                            <div class="section-title">
-                                <h2>Title</h2>
-                            </div>
-                            @Html.DisplayFor(model => model.Title)
-                        </div>
-
-                        <div class="form-group">
-                            <div class="section-title">
-                                <h2>Decription</h2>
-                            </div>
-                            @Html.DisplayFor(model => model.Description)
-                        </div>
-                        <div class="form-group">
-                            @Html.DisplayFor(model => model.FullDescription)
-                        </div>
-
-                        <div class="form-group">
-                            <div class="section-title">
-                                <h2>Photo</h2>
-                            </div>
-                            @Html.DisplayFor(model => model.Photo)
-                        </div>
-
-                        <div class="form-group">
-                            <div class="section-title">
-                                <h2>Target Goal</h2>
-                            </div>
-                            @Html.DisplayFor(model => model.TargetGoal)
-                        </div>
-
-                        <div class="form-group">
-                            <div class="section-title">
-                                <h2>Current Amount</h2>
-                            </div>
-                            @Html.DisplayFor(model => model.CurrentAmmount)
-                        </div>
-
-                        @*<div class="form-group">
-                            <div class="section-title">
-                                <h2>ModeratorId</h2>
-                            </div>
-                            @Html.DisplayFor(model => model.ModeratorId)
-                        </div>*@
-                        <div class="form-group">
-                            @using (Html.BeginForm())
-                            {
-                                @Html.AntiForgeryToken()
-                                <div class="form-group">
-                                    <div>
-                                        <input type="submit" value="Delete" class="thm-btn style-1" />
-                                    </div>
+                <div class="row clearfix">
+                    <hr />
+                    <div class="row clearfix" style="justify-content: center">
+                        <div class="col-md-12 col-sm-12 col-xs-6">
+                            <hr />
+                            <div class="form-group" style="text-align:left;">
+                                <div style=" padding-bottom: 40px;">
+                                    <h3><strong>@Html.DisplayFor(model => model.Title)</strong></h3>
+                                    @*<div>
+                                            <p>@Html.DisplayFor(model => model.Photo)</p>
+                                        </div>*@
                                 </div>
-
+                                <div style="padding-bottom: 30px;">
+                                    <h4><em>@Html.DisplayFor(model => model.Description)</em></h4>
+                                </div>
                                 <div>
-
-                                    @Html.ActionLink("Back to List", "OrganizeCause")
+                                    <p style="color:black;">DESCRIPTION: @Html.DisplayFor(model => model.FullDescription)</p>
                                 </div>
-                            }
+                                <div>
+                                    <p style="color:black;">Target Goal: @Html.DisplayFor(model => model.TargetGoal)</p>
+                                    <p style="color:black;">Current Amount: @Html.DisplayFor(model => model.CurrentAmmount)</p>
+                                </div>
+
+                                @*<div class="form-group">
+                                        <div class="section-title">
+                                            <h2>ModeratorId</h2>
+                                        </div>
+                                        @Html.DisplayFor(model => model.ModeratorId)
+                                    </div>*@
+                                @*<div class="form-group">*@
+                                @using (Html.BeginForm())
+                                {
+                                    @Html.AntiForgeryToken()
+                                    <div class="form-group">
+                                        <div>
+                                            <input type="submit" value="Delete" class="thm-btn style-1" />
+                                        </div>
+                                    </div>
+                                    <div style="text-align:center;">
+                                        @Html.ActionLink("Back to List", "OrganizeCause")
+                                    </div>
+                                }
+                                @*</div>*@
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+            </div>
         </div>
-    </div>
 </section>
