--- a/CommunityKitchen/Views/Cause/EditCause.cshtml
+++ b/CommunityKitchen/Views/Cause/EditCause.cshtml
@@ -8,10 +8,13 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="default-form-area" style="display: flex; justify-content: center">
+<section>
+    <div class="default-form-area" style="display: flex; justify-content: center; padding-top:100px">
         <div id="contact-form" class="default-form">
-            <h1 style="margin-left:100px">Edit Cause</h1>
-            <div class="row clearfix" style="justify-content: center">
+            <div class="section-title" style="padding-bottom:40px;">
+                <h3 style=" text-align:center;"><strong>EDIT <span>CAUSE</span></strong></h3>
+            </div>
+            <div class="row clearfix">
                 <div class="col-md-12 col-sm-12 col-xs-6">
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -39,13 +42,13 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.TargetGoal)
+                        @Html.LabelFor(model => model.TargetGoal, "Target Goal")
                         @Html.EditorFor(model => model.TargetGoal, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.TargetGoal, "", new { @class = "text-danger" })
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.CurrentAmmount)
+                        @Html.LabelFor(model => model.CurrentAmmount, "Current Amount")
                         @Html.EditorFor(model => model.CurrentAmmount, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.CurrentAmmount, "", new { @class = "text-danger" })
                     </div>
@@ -65,6 +68,7 @@
             </div>
         </div>
     </div>
+</section>
 
 }
 
