--- a/CommunityKitchen/Views/Event/EditEvent.cshtml
+++ b/CommunityKitchen/Views/Event/EditEvent.cshtml
@@ -3,16 +3,17 @@
 @{
     ViewBag.Title = "EditEvent";
 }
-<br />
-<br />
-<br />
+
 @using (Html.BeginForm("EditEvent", "Event", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    <div class="default-form-area" style="display: flex; justify-content: center">
+<section>
+    <div class="default-form-area" style="display: flex; justify-content: center; padding-top:100px">
         <div id="contact-form" class="default-form">
-            <h1 style="margin-left:100px;">Edit Event</h1>
-            <div class="row clearfix" style="justify-content: center">
+            <div class="section-title" style="padding-bottom:40px;">
+                <h3 style=" text-align:center;"><strong>EDIT <span>EVENT</span></strong></h3>
+            </div>
+            <div class="row clearfix">
                 <div class="col-md-12 col-sm-12 col-xs-6">
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -47,7 +48,7 @@
 
                     <div class="form-group">
                         @{ string shortDate = Model.EventDate.ToShortDateString(); }
-                        @Html.LabelFor(model => shortDate)
+                        @Html.LabelFor(model => shortDate, "Date")
                         @Html.EditorFor(model => model.EventDate, new { htmlAttributes = new { @Value = @Model.EventDate.ToString("yyyy-MM-dd"), @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.EventDate, "", new { @class = "text-danger" })
                     </div>
@@ -66,7 +67,7 @@
             </div>
         </div>
     </div>
-
+</section>
 }
 
 
