--- a/CommunityKitchen/Views/Event/CreateEvent.cshtml
+++ b/CommunityKitchen/Views/Event/CreateEvent.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm("CreateEvent", "Event", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    <div class="default-form-area" style="display: flex; justify-content: center">
+    <div class="default-form-area" style="display: flex; justify-content: center; margin-top: 130px !important;">
         <div id="contact-form" class="default-form">
             <h1 style="margin-left:120px;">Creating Event</h1>
             <div class="row clearfix" style="justify-content: center">
@@ -40,8 +40,8 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.EditorFor(model => model.EventDate, new { htmlAttributes = new { @type = "date", @class = "form-control", placeholder = "Events Date" } })
-                        @Html.ValidationMessageFor(model => model.EventDate, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.EventDate, new { htmlAttributes = new { @class = "form-control", placeholder = "Events Date" } })
+                        @Html.ValidationMessageFor(model => model.EventDate, "", new { @type = "date", @class = "text-danger" })
                     </div>
 
                 </div>
