--- a/CommunityKitchen/Views/Event/EditEvent.cshtml
+++ b/CommunityKitchen/Views/Event/EditEvent.cshtml
@@ -9,9 +9,9 @@
 @using (Html.BeginForm("EditEvent", "Event", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    <div class="default-form-area" style="display: flex; justify-content: center">
+    <div class="default-form-area" style="display: flex; justify-content: center; margin-top:118px!important;">
         <div id="contact-form" class="default-form">
-            <h1 style="margin-left:100px;">Edit Event</h1>
+            <h1 style="margin-left:70px;">Edit Event</h1>
             <div class="row clearfix" style="justify-content: center">
                 <div class="col-md-12 col-sm-12 col-xs-6">
                     <hr />
@@ -48,8 +48,8 @@
                     <div class="form-group">
                         @{ string shortDate = Model.EventDate.ToShortDateString(); }
                         @Html.LabelFor(model => shortDate)
-                        @Html.EditorFor(model => model.EventDate, new { htmlAttributes = new { @Value = @Model.EventDate.ToString("yyyy-MM-dd"), @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.EventDate, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.EventDate, new { htmlAttributes = new { @type = "date", @Value = @Model.EventDate.ToString("yyyy-MM-dd"), @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.EventDate, "", new { @type = "date", @class = "text-danger" })
                     </div>
                     <div class="form-group">
                         <div>
