--- a/CommunityKitchen/Views/Event/DeleteEvent.cshtml
+++ b/CommunityKitchen/Views/Event/DeleteEvent.cshtml
@@ -13,7 +13,7 @@
                 </div>
                 <div class="row clearfix">
                     <hr />
-                    <div class="form-group" style="text-align:left;">
+                    <div class="form-group" style="text-align:left; justify-content: center">
                         <div style=" padding-bottom: 40px;">
                             <h3><strong>@Html.DisplayFor(model => model.Title)</strong></h3>
                             <img id="imgDetails" style="border-radius:50px; height: 200px; width: 800px; object-fit: cover;" src="~/Assets/images/ImagesSaved/@Model.Photo" />
@@ -28,7 +28,7 @@
                             <p style="color:black;">Address: @Html.DisplayFor(model => model.Address)</p>
                             <p style="color:black;">Date: @Html.DisplayFor(model => model.EventDate)</p>
                         </div>
-                        
+
                         @using (Html.BeginForm())
                         {
                             @Html.AntiForgeryToken()
