--- a/CommunityKitchen/Views/Cause/EditCause.cshtml
+++ b/CommunityKitchen/Views/Cause/EditCause.cshtml
@@ -8,9 +8,9 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="default-form-area" style="display: flex; justify-content: center; margin-top: 150px !important;">
+    <div class="default-form-area" style="display: flex; justify-content: center">
         <div id="contact-form" class="default-form">
-            <h1 style="margin-left:70px">Edit Cause</h1>
+            <h1 style="margin-left:100px">Edit Cause</h1>
             <div class="row clearfix" style="justify-content: center">
                 <div class="col-md-12 col-sm-12 col-xs-6">
                     <hr />
