--- a/CommunityKitchen/Views/Cause/CreateCause.cshtml
+++ b/CommunityKitchen/Views/Cause/CreateCause.cshtml
@@ -7,57 +7,49 @@
 @using (Html.BeginForm("CreateCause", "Cause", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-
-    <div class="default-form-area" style="margin-top: 136px !important; display: flex; justify-content: center ">
-        <div id="contact-form" class="default-form">
-            <h1 style="margin-left:20px">Creating Cause</h1>
-            <div class="row clearfix" style="justify-content: center">
-                <div class="col-md-12 col-sm-12 col-xs-6">
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-                    <div class="form-group">
-                        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", placeholder = "Causes Title" } })
-                        @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Causes Description" } })
-                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control", type = "file", placeholder = "Causes Photo" } })
-                        @Html.ValidationMessageFor(model => model.Photo, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.EditorFor(model => model.TargetGoal, new { htmlAttributes = new { @class = "form-control", placeholder = "Causes Target-Amount" } })
-                        @Html.ValidationMessageFor(model => model.TargetGoal, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.EditorFor(model => model.CurrentAmmount, new { htmlAttributes = new { @class = "form-control", placeholder = "Causes Current-Amount" } })
-                        @Html.ValidationMessageFor(model => model.CurrentAmmount, "", new { @class = "text-danger" })
-                    </div>
-
-
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="form-group">
-                            <input type="submit" value="Create" class="thm-btn" />
-                        </div>
-
-                    </div>
-                    <div class="form-group">
-                        <div>
-                            @Html.ActionLink("Back to List", "OrganizeCause")
-                        </div>
-                    </div>
+<div class="default-form-area" style="display: flex; justify-content: center; padding-top:100px">
+    <div id="contact-form" class="default-form">
+        <div class="section-title" style="padding-bottom:40px;">
+            <h2 style=" text-align:center;"><strong>CREATE <span>CAUSE</span></strong></h2>
+        </div>
+        <div class="row clearfix">
+            <div class="col-md-12 col-sm-12 col-xs-6">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", placeholder = "Causes Title" } })
+                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
                 </div>
+                <div class="form-group">
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Causes Description" } })
+                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control", type = "file", placeholder = "Causes Photo" } })
+                    @Html.ValidationMessageFor(model => model.Photo, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.EditorFor(model => model.TargetGoal, new { htmlAttributes = new { @class = "form-control", placeholder = "Causes Target-Amount" } })
+                    @Html.ValidationMessageFor(model => model.TargetGoal, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group">
+                    @Html.EditorFor(model => model.CurrentAmmount, new { htmlAttributes = new { @class = "form-control", placeholder = "Causes Current-Amount" } })
+                    @Html.ValidationMessageFor(model => model.CurrentAmmount, "", new { @class = "text-danger" })
+                </div>
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="thm-btn" />
+                    </div>
 
+                </div>
+                <div class="form-group" style="text-align:center;">
+                    @Html.ActionLink("Back to List", "OrganizeCause")
+                </div>
             </div>
+
         </div>
     </div>
+</div>
     
     }
 
