--- a/CommunityKitchen/Views/Cause/EditCause.cshtml
+++ b/CommunityKitchen/Views/Cause/EditCause.cshtml
@@ -58,10 +58,8 @@
                             <input type="submit" value="Save" class="thm-btn" />
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div>
+                    <div class="form-group" style="text-align:center;">
                             @Html.ActionLink("Back to List", "OrganizeCause")
-                        </div>
                     </div>
                 </div>
 
