--- a/CommunityKitchen/Views/Event/CreateEvent.cshtml
+++ b/CommunityKitchen/Views/Event/CreateEvent.cshtml
@@ -11,54 +11,55 @@
 @using (Html.BeginForm("CreateEvent", "Event", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    <div class="default-form-area" style="display: flex; justify-content: center">
-        <div id="contact-form" class="default-form">
-            <h1 style="margin-left:120px;">Creating Event</h1>
-            <div class="row clearfix" style="justify-content: center">
-                <div class="col-md-8 col-sm-12 col-xs-6">
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="default-form-area" style="display: flex; justify-content: center; padding-top:100px">
+    <div id="contact-form" class="default-form">
+        <div class="section-title" style="padding-bottom:40px;">
+            <h2 style=" text-align:center;"><strong>CREATE <span>EVENT</span></strong></h2>
+        </div>
+        <div class="row clearfix">
+            <div class="col-md-12 col-sm-12 col-xs-6">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                    <div class="form-group">
-                        @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", placeholder = "Events Title" } })
-                        @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Events Description" } })
-                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control", type = "file", placeholder = "Events Photo" } })
-                        @Html.ValidationMessageFor(model => model.Photo, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control", placeholder = "Events Address" } })
-                        @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        @Html.EditorFor(model => model.EventDate, new { htmlAttributes = new { @type = "date", @class = "form-control", placeholder = "Events Date" } })
-                        @Html.ValidationMessageFor(model => model.EventDate, "", new { @class = "text-danger" })
-                    </div>
-
-                </div>
-                <div class="col-md-12 col-sm-12 col-xs-12">
-                    <div class="form-group">
-                        <input type="submit" value="Create" class="thm-btn" />
-                    </div>
-
-                </div>
                 <div class="form-group">
-                    <div>
-                        @Html.ActionLink("Back to List", "OrganizeEvents")
-                    </div>
+                    @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control", placeholder = "Events Title" } })
+                    @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", placeholder = "Events Description" } })
+                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control", type = "file", placeholder = "Events Photo" } })
+                    @Html.ValidationMessageFor(model => model.Photo, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control", placeholder = "Events Address" } })
+                    @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    @Html.EditorFor(model => model.EventDate, new { htmlAttributes = new { @type = "date", @class = "form-control", placeholder = "Events Date" } })
+                    @Html.ValidationMessageFor(model => model.EventDate, "", new { @class = "text-danger" })
+                </div>
+
+            </div>
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="form-group">
+                    <input type="submit" value="Create" class="thm-btn" />
+                </div>
+            </div>
+            <div class="form-group" style="text-align:center;">
+                <div>
+                    @Html.ActionLink("Back to List", "OrganizeEvents")
                 </div>
             </div>
         </div>
     </div>
+</div>
 }
 
 @section Scripts {
