--- a/CommunityKitchen/Views/Event/EditEvent.cshtml
+++ b/CommunityKitchen/Views/Event/EditEvent.cshtml
@@ -49,18 +49,16 @@
                     <div class="form-group">
                         @{ string shortDate = Model.EventDate.ToShortDateString(); }
                         @Html.LabelFor(model => shortDate, "Date")
-                        @Html.EditorFor(model => model.EventDate, new { htmlAttributes = new { @Value = @Model.EventDate.ToString("yyyy-MM-dd"), @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.EventDate, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.EventDate, new { htmlAttributes = new { @min=DateTime.Now, @type = "date", @Value = @Model.EventDate.ToString("yyyy-MM-dd"), @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.EventDate, "", new {  @class = "text-danger" })
                     </div>
                     <div class="form-group">
                         <div>
                             <input type="submit" value="Save" class="thm-btn" />
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div>
+                    <div class="form-group" style="text-align:center;">
                             @Html.ActionLink("Back to List", "OrganizeEvents")
-                        </div>
                     </div>
                 </div>
 
