--- a/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_Footer.cshtml
@@ -42,25 +42,19 @@
     }
 </style>
 <footer class="main-footer">
-
     <!--Widgets Section-->
     <div class="widgets-section">
         <div class="container">
-
             <div class="section-title">
                 <div class="image-box">
                     <img src="images/footer/fl.png" alt="">
                 </div>
-
                 <p>
                     CHARITY  SYMPATHY
                     <hr /> ~ Non-Profit  Organization ~
                 </p>
             </div>
-
-
             <div class="row">
-
                 <!--Footer Column-->
                 <div class="col-md-4">
                     <div class="footer-column m-4">
@@ -68,12 +62,15 @@
                             <h3 class="footer-title">Information</h3>
                             <div class="widget-content">
                                 <div class="text">
-                                <p>We are a non-profit organization following a sole purpose; 
-                                 Raising money for charity purposes of any kind. Join us in our effort to make this world better !</p> </div>
+                                    <p>
+                                        We are a non-profit organization following a sole purpose;
+                                        Raising money for charity purposes of any kind. Join us in our effort to make this world better !
+                                    </p>
+                                </div>
                                 <ul class="contact-info">
                                     <li><span class="fa fa-map-marker"></span>Karaoli Dhmhtriou 48, Athens</li>
-                                    <li><span class="fa fa-envelope-o"></span> charitysupport@user.com</li>
-                                    <li><span class="fa fa-phone"></span>+30 010 990 0000</li>
+                                    <li><span class="fa fa-envelope-o"></span> charitysympathyteam@gmail.com</li>
+                                    <li><span class="fa fa-phone"></span>(+30) 010 990 0000</li>
                                 </ul>
                             </div>
                         </div>
@@ -149,97 +146,97 @@
                     <!--Footer Column-->
                     <!--Footer Column-->
                     @*<div class="footer-column col-md-6 col-sm-6 col-xs-12">
-            <div class="footer-widget Instagram-widget">
-                <h3 class="footer-title">Instagram</h3>
-                <div class="widget-content">
-                    <ul class="instagram">
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/1.jpg" alt="Awesome Image">
-                                <div class="overlay">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
+                            <div class="footer-widget Instagram-widget">
+                                <h3 class="footer-title">Instagram</h3>
+                                <div class="widget-content">
+                                    <ul class="instagram">
+                                        <li>
+                                            <div class="img-holder">
+                                                <img src="images/footer/1.jpg" alt="Awesome Image">
+                                                <div class="overlay">
+                                                    <div class="box">
+                                                        <div class="content">
+                                                            <a href="#"><i class="fa fa-link"></i></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
 
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/2.jpg" alt="Awesome Image">
-                                <div class="overlay">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
+                                        <li>
+                                            <div class="img-holder">
+                                                <img src="images/footer/2.jpg" alt="Awesome Image">
+                                                <div class="overlay">
+                                                    <div class="box">
+                                                        <div class="content">
+                                                            <a href="#"><i class="fa fa-link"></i></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
 
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/3.jpg" alt="Awesome Image">
-                                <div class="overlay">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/4.jpg" alt="Awesome Image">
-                                <div class="overlay">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/5.jpg" alt="Awesome Image">
-                                <div class="overlay">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="img-holder">
-                                <img src="images/footer/6.jpg" alt="Awesome Image">
-                                <div class="overlay">
-                                    <div class="box">
-                                        <div class="content">
-                                            <a href="#"><i class="fa fa-link"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
+                                        <li>
+                                            <div class="img-holder">
+                                                <img src="images/footer/3.jpg" alt="Awesome Image">
+                                                <div class="overlay">
+                                                    <div class="box">
+                                                        <div class="content">
+                                                            <a href="#"><i class="fa fa-link"></i></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="img-holder">
+                                                <img src="images/footer/4.jpg" alt="Awesome Image">
+                                                <div class="overlay">
+                                                    <div class="box">
+                                                        <div class="content">
+                                                            <a href="#"><i class="fa fa-link"></i></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="img-holder">
+                                                <img src="images/footer/5.jpg" alt="Awesome Image">
+                                                <div class="overlay">
+                                                    <div class="box">
+                                                        <div class="content">
+                                                            <a href="#"><i class="fa fa-link"></i></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="img-holder">
+                                                <img src="images/footer/6.jpg" alt="Awesome Image">
+                                                <div class="overlay">
+                                                    <div class="box">
+                                                        <div class="content">
+                                                            <a href="#"><i class="fa fa-link"></i></a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </li>
 
-                    </ul>
+                                    </ul>
+
+                                </div>
+
+                            </div>
+                        </div>*@
 
                 </div>
-
             </div>
-        </div>*@
 
-                </div>
-                </div>
-
-            </div>
         </div>
+    </div>
 
     <!--Footer Bottom-->
     <div class="footer-bottom">
