--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -7374,6 +7374,28 @@ default-form style-three
 .google-email-form{
     padding:10px 0px 30px;
 }
+.map-container-3 {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+    box-shadow: rgb(0, 0, 0, 0.30) 0px 10px 50px 4px;
+}
+
+    .map-container-3 iframe {
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+    }
+
+.map-address{
+    margin-top:30px;
+    text-align:left;
+    font-weight:400;
+    font-size:17.5px;
+}
 /*
 .description {
     color: black !important;
