--- a/CommunityKitchen/Views/Home/Contact.cshtml
+++ b/CommunityKitchen/Views/Home/Contact.cshtml
@@ -27,8 +27,8 @@
                     </div>
                     <h4>Drop Us A Line</h4>
                     <div class="text">
-                        <p>Business standards services compliant. Users without extensible costs.</p>
-                        <h5><a style="color:red;" href="mailto:Support@example.com">Support@example.com</a></h5>
+                        <p>If you find yourself in a tough spot or know someone who does, let us know!</p>
+                        <h5><a style="color:red;" href="mailto:charitysympathyteam@gmail.com">charitysympathyteam@gmail.com</a></h5>
                     </div>
                 </div>
             </div>
@@ -39,8 +39,8 @@
                     </div>
                     <h4>Commercial</h4>
                     <div class="text">
-                        <p>Business standards services compliant. Users without extensible costs.</p>
-                        <h5><a style="color:red;" href="mailto:Marketing@example.com">Marketing@example.com</a></h5>
+                        <p>We are gladly recieving offers for collaboration. Send us an email!</p>
+                        <h5><a style="color:red;" href="mailto:charitysympathyteam@gmail.com">charitysympathyteam@gmail.com</a></h5>
                     </div>
                 </div>
             </div>
@@ -51,24 +51,37 @@
                     </div>
                     <h4>Visit Our Office</h4>
                     <div class="text">
-                        <p>262 Milacina Mrest Street, Behansed, Paris, France</p>
-                        <h5>(+86) 6 888 888</h5>
+                        <p>Visit us at Karaoli Dhmhtriou 48, Athens, Greece. Come say HI!</p>
+                        <h5>(+30) 010 990 0000</h5>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 </section>
-
-
+<section>
+    <div class="container">
+        <!--Google map-->
+        <div id="" class="z-depth-1-half map-container-3" >
+            <iframe 
+               src="https://www.google.com/maps/embed/v1/place?q=place_id:Ei5LYXJhb2xpIGtlIERpbWl0cmlvdSA0OCwgUGlyZWFzIDE4NSAzMiwgR3JlZWNlIlASTgo0CjIJ9eJxye67oRQR1DebOgaA1twaHgsQ7sHuoQEaFAoSCZXNHh_su6EUEUAWbSAwvQAcDBAwKhQKEgkFaTs16buhFBFhURhNHFhHuw&key=AIzaSyCOqmd_RyEPyEd7LEpTGeATAyR9fqBt5WE" 
+               frameborder="0" style="border:0;" allowfullscreen></iframe>
+        </div>
+        <div class="map-address">
+            <div>
+                <img src="~/Assets/css/map-rolund.jpg" />
+                Karaoli Dhmhtriou 48, Athens
+            </div>
+        </div>
+    </div>
+</section>
 <section class="contact_us">
     <div class="container">
         <div class="section-title text-center">
             <h2>Leave us a message</h2>
         </div>
         <div class="default-form-area">
-            <form id="contact-form" name="contact_form" class="default-form"  method="POST">
+            <form id="contact-form" name="contact_form" class="default-form" method="POST">
                 <div class="row clearfix">
                     <div class="col-md-6 col-sm-6 col-xs-12">
 
@@ -100,27 +113,14 @@
                         <div class="form-group">
                             <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="">
 
-
                             <button id="butt" onclick="document.getElementById('id01').style.display='block'" class="thm-btn" type="submit" data-loading-text="Please wait..." disabled>send message</button>
 
                         </div>
                     </div>
-
                 </div>
             </form>
         </div>
-
     </div>
-    @*<div class="home-google-map">
-            <div class="google-map"
-                 id="contact-google-map"
-                 data-map-lat="36.170043"
-                 data-map-lng="-115.144622"
-                 data-icon-path="images/logo/map-marker.png"
-                 data-map-title="Chester"
-                 data-map-zoom="14">
-            </div>
-        </div>*@
 </section>
 <script>
     document.getElementById("contact-form").addEventListener("keyup", function () {
